--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
@@ -36,8 +37,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.7.1",
-    "react-native-web": "~0.19.10",
-    "@react-native-picker/picker": "2.7.5"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,7 +45,7 @@
     "@types/luxon": "^3.4.2",
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-expo": "^7.1.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
